Movie clip stabilize display ignore footage colorspace settings #76698

Closed
opened 2020-05-12 20:10:33 +02:00 by Vincent Girès · 6 comments

System Information
Operating system: Linux-5.4.38-1-MANJARO-x86_64-with-arch-Manjaro-Linux 64 Bits
Graphics card: GeForce GTX 760/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.82

Blender Version
Broken: version: 2.82 (sub 7), branch: master, commit date: 2020-03-12 05:06, hash: 375c7dc4ca

Short description of error
When a movie clip is stabilized with other colorspace than the default one, the "show stable" in the movie clip editor or the "stabilize 2d clip" in the VSE with the same clip display a wrong colorspace.

Exact steps for others to reproduce the error
Load a video clip, change the footage colorspace to anything else, activate the "2d stabilisation" in the stabilization tab and then activate the "show stable" in the clip vue or use the stabilized clip in the VSE.

**System Information** Operating system: Linux-5.4.38-1-MANJARO-x86_64-with-arch-Manjaro-Linux 64 Bits Graphics card: GeForce GTX 760/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.82 **Blender Version** Broken: version: 2.82 (sub 7), branch: master, commit date: 2020-03-12 05:06, hash: `375c7dc4ca` **Short description of error** When a movie clip is stabilized with other colorspace than the default one, the "show stable" in the movie clip editor or the "stabilize 2d clip" in the VSE with the same clip display a wrong colorspace. **Exact steps for others to reproduce the error** Load a video clip, change the footage colorspace to anything else, activate the "2d stabilisation" in the stabilization tab and then activate the "show stable" in the clip vue or use the stabilized clip in the VSE.
Author

Added subscriber: @VincentGires

Added subscriber: @VincentGires
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Philipp Oeser self-assigned this 2020-05-12 23:12:09 +02:00
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Fix incoming...

Fix incoming...

This issue was referenced by abcb23f5a3

This issue was referenced by abcb23f5a3b6f49b9fae741ce788a9a4a2a8e24f
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
3 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender#76698
No description provided.